# krypto_2024

./: README.md
lista_1/: Cargo.toml  build.rs  conv_table6.py  kernel.cu
lista_1/src/: main.rs  md5.rs
lista_2/: Cargo.toml  diffie_hellman
lista_2/src/: field.rs  lib.rs  main.rs
lista_2/src/field/: f2_poly.rs  fp.rs  fp_poly.rs  mod.rs
lista_3/: Cargo.toml  binary.sage  generate_test_vectors.sage
lista_3/src/: lib.rs  main.rs
lista_3/src/field/: ec.rs  ec_binary.rs  f2_poly.rs  fp.rs  fp_poly.rs  mod.rs
