[package]
name = "diffie_hellman"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
base64 = "0.22.1"
clap = { version = "4.5.23", features = ["derive"] }
num = { version = "0.4.3", features = ["rand"] }
rand = "0.8.5"
reqwest = { version = "0.12.11", features = ["blocking", "json"] }
serde = { version = "1.0.217", features = ["derive"] }
